# Ising-sim2real

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
results/: classical_d3_X.csv  classical_d3_Z.csv  classical_d5_X.csv  classical_d5_Z.csv  classical_d7_X.csv  classical_d7_Z.csv  eval_all.csv  ising_accurate_d3_X.csv  ising_accurate_d3_Z.csv  ising_accurate_d5_X.csv  ising_accurate_d5_Z.csv  ising_accurate_d7_X.csv  ising_accurate_d7_Z.csv  ising_fast_d3_X.csv  ising_fast_d3_Z.csv  ising_fast_d5_X.csv  ising_fast_d5_Z.csv  ising_fast_d7_X.csv  ising_fast_d7_Z.csv
results/fitted_noise_models/: d3_q4_9.json  d3_q6_11.json  d5_q6_5.json
results/t4_checkpoints/: t3_fitted.pt  t4_from_stock.pt  t4_from_t3.pt
results/willow_real/: beliefmatching_d3_X_q10_7.csv  beliefmatching_d3_X_q10_7_r1.csv  beliefmatching_d3_X_q10_7_r10.csv  beliefmatching_d3_X_q10_7_r13.csv  beliefmatching_d3_X_q10_7_r30.csv  beliefmatching_d3_X_q10_7_r50.csv  beliefmatching_d3_X_q10_7_r70.csv  beliefmatching_d3_X_q2_7.csv  beliefmatching_d3_X_q2_7_r1.csv  beliefmatching_d3_X_q2_7_r10.csv  beliefmatching_d3_X_q2_7_r13.csv  beliefmatching_d3_X_q2_7_r30.csv  beliefmatching_d3_X_q2_7_r50.csv  beliefmatching_d3_X_q2_7_r70.csv  beliefmatching_d3_X_q4_5.csv  beliefmatching_d3_X_q4_5_r1.csv  beliefmatching_d3_X_q4_5_r10.csv  beliefmatching_d3_X_q4_5_r13.csv  beliefmatching_d3_X_q4_5_r30.csv  beliefmatching_d3_X_q4_5_r50.csv  beliefmatching_d3_X_q4_5_r70.csv  beliefmatching_d3_X_q4_9.csv  beliefmatching_d3_X_q4_9_r1.csv  beliefmatching_d3_X_q4_9_r10.csv  beliefmatching_d3_X_q4_9_r13.csv  beliefmatching_d3_X_q4_9_r30.csv  beliefmatching_d3_X_q4_9_r50.csv  beliefmatching_d3_X_q4_9_r70.csv  beliefmatching_d3_X_q6_11.csv  beliefmatching_d3_X_q6_11_r1.csv  beliefmatching_d3_X_q6_11_r10.csv  beliefmatching_d3_X_q6_11_r13.csv  beliefmatching_d3_X_q6_11_r30.csv  beliefmatching_d3_X_q6_11_r50.csv  beliefmatching_d3_X_q6_11_r70.csv  beliefmatching_d3_X_q6_3.csv  beliefmatching_d3_X_q6_3_r1.csv  beliefmatching_d3_X_q6_3_r10.csv  beliefmatching_d3_X_q6_3_r13.csv  beliefmatching_d3_X_q6_3_r30.csv  (+621 more)
results/willow_synth_fit/: beliefmatching_d3_X_q10_7_r1.csv  (+448 more)
scripts/: build_2x2.py  build_bootstrap.py  build_ladder.py  build_selection.py  build_sensitivity.py  fit_bootstrap_draw.py  fit_noise_models.py  gen_sensitivity_models.py  merge_willow_real.py  publish_hf_dataset.py  push_results.sh  run_baseline.py  run_ising.py  setup_ising.py
slurm/: eval.sbatch  eval_2x2.sbatch  eval_d3.sbatch  eval_d7.sbatch  eval_sensitivity.sbatch  eval_synth.sbatch  eval_willow.sbatch  fit_bootstrap.sbatch  smoke_test.slurm
tests/: conftest.py  test_baseline_science.py  test_bootstrap_resampling.py  test_build_bootstrap.py  test_decoder_pymatching.py  test_e2e_validation_gate.py  test_fit_bootstrap_draw.py  test_fit_noise_models.py  test_hf_publish.py  test_ingest_dataset.py  test_ingest_detectors.py  test_ingest_willow.py  test_ising_adapter.py  test_ising_pipeline_e2e.py  test_ising_smoke.py  test_ising_synthetic_native.py  test_metrics.py  test_noise_injector.py  test_param_fit.py  test_sensitivity_models.py  test_syndrome_dem.py  test_synthetic_source.py  test_willow_baseline.py  test_willow_patch_key.py
(+3914 files in other folders)
