[project]
name = "ising-sim2real"
version = "0.0.1"
description = "Benchmarking open surface-code decoders on real Willow hardware vs. synthetic noise of rising fidelity."
requires-python = ">=3.11,<3.14"
dependencies = [
    # core numerics / plots / rank stats
    "numpy",
    "scipy",
    "matplotlib",
    # neural pre-decoder runtime (CPU wheel by default; see README for a CUDA build)
    "torch",
    # building/loading the vendored NVIDIA Ising model from config
    "omegaconf",
    "hydra-core",
    "safetensors>=0.4.0",
    # ingest pipeline + MWPM baseline
    "stim",
    "pymatching",
    # fallback weight download from Hugging Face
    "huggingface-hub",
]

[project.optional-dependencies]
# Extra decoders for the panel. Installed on demand, not part of the base env.
decoders = [
    "ldpc",
    "beliefmatching",
    "tesseract-decoder",
]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ising_sim2real"]

[tool.pytest.ini_options]
testpaths = ["tests"]
