[project]
name = "ising-sim2real"
version = "0.0.1"
description = "Benchmarking open surface-code decoders on real Willow hardware vs. synthetic noise of rising fidelity."
requires-python = ">=3.11,<3.14"
dependencies = [
    # core numerics / plots / rank stats
    "numpy",
    "scipy",
    "matplotlib",
    # neural pre-decoder runtime. macOS gets the default PyPI wheel (CPU/MPS);
    # Linux (clusters) gets the CUDA 12.4 build via the index source below.
    "torch",
    # building/loading the vendored NVIDIA Ising model from config
    "omegaconf",
    "hydra-core",
    "safetensors>=0.4.0",
    # ingest pipeline + MWPM baseline
    "stim",
    "pymatching",
    # eval harness progress bar
    "tqdm",
    # parquet read/write for the Hugging Face dataset (publish + --source hf)
    "pyarrow",
    # dataset download + weight fallback from Hugging Face
    "huggingface-hub",
]

[project.scripts]
ising-eval = "ising_sim2real.eval.runner:main"

[project.optional-dependencies]
# Extra decoders for the panel. Installed on demand, not part of the base env.
decoders = [
    "ldpc",
    "beliefmatching",
    "tesseract-decoder",
]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ising_sim2real"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Makes `scripts.*` importable from tests under bare `uv run pytest`, matching
# the sys.path behavior `python -m pytest` already gets for free (rootdir on
# sys.path). Needed by tests/test_hf_publish.py's `import scripts.publish_hf_dataset`.
pythonpath = ["."]

# Torch wheels: CUDA 12.4 build on Linux (GPU clusters), default PyPI wheel
# (CPU/MPS) everywhere else. Change cu124 -> cu121/cu128 to match the cluster's
# driver if needed.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
